implementing matching algorithm